Bug 97954: Allow SpiderMonkey to be built on its own, or as part of Mozilla.
Give SpiderMonkey its own configure script and top-level Makefile.
Adjust js/src/Makefile as appropriate for life as a stand-alone
makefile, instead of a 'make export; make libs'-style Mozilla tier
makefile.  Have the configure script accept '--with-nspr-cflags' and
'--with-nspr-libs' options for using an in-tree NSPR.  Also accept
'--with-system-nspr', '--with-nspr-prefix', and
'--with-nspr-exec-prefix' flags for using an installed NSPR.  Default
to --disable-jemalloc, assuming we don't have that part of the tree
available; have the top-level configure script pass --enable-jemalloc
as needed.

Since we no longer have an export phase to copy header files into
dist/include/js before we build the library, we need to be able to
find nanojit.h in the nanojit directory; fix references in
jsbuiltins.h and jstracer.cpp.

Give SpiderMonkey it its own copies of many of the files from ./config
and ./build.  These are all exact copies, except as follows:

. js/src/config/Makefile.in: js/src only has a subset of
  js/src/config, and thus a subset of the makefile targets.

. js/src/config/autoconf.mk.in: js/src/configure.in has its own make
  variables to set, not set by the top-level configure script, so it
  needs a custom automake.mk template.

. js/src/config/make-system-wrappers.pl: a copy from nsprpub/config,
  so that we can build without having an NSPR source tree handy.

Invoke js/src/configure from ./configure, passing the values computed
for NSPR_CFLAGS and NSPR_LIBS by the top-level configure script.

Treat js/src as a static directory of the js tier, and create a new
config/js (just a Makefile) to be the js tier's non-static directory.
Let js/src/configure generate SpiderMonkey's makefiles, not
./configure.

Generate a 'js-config' script, which clients can call to find the
CFLAGS and LIBS values necessary to compile and link against an
installed SpiderMonkey library.  Don't include the js-c

--- a/config/js/Makefile.in
+++ b/config/js/Makefile.in
@@ -1,4 +1,5 @@
 #
+#
 *
 *
 *
@@ -141,11 +142,26 @@ The
 Original
 Code
 is
-the
-Mozilla
-build
-system
+mozilla
 .
+org
+code
+.
+This
+file
+was
+copied
+from
+parts
+of
+#
+mozilla
+/
+config
+/
+Makefile
+.
+in
 #
 #
 The
@@ -157,21 +173,9 @@ Original
 Code
 is
 #
-the
-Mozilla
-Foundation
-<
-http
-:
-/
-/
-www
-.
-mozilla
-.
-org
-/
->
+Netscape
+Communications
+Corporation
 .
 #
 Portions
@@ -185,7 +189,7 @@ Copyright
 (
 C
 )
-2006
+1998
 #
 the
 Initial
@@ -203,6 +207,24 @@ s
 )
 :
 #
+Robert
+Ginda
+<
+rginda
+netscape
+.
+com
+>
+#
+John
+Taylor
+<
+jtaylor
+netscape
+.
+com
+>
+#
 Benjamin
 Smedberg
 <
@@ -211,10 +233,6 @@ smedbergs
 .
 us
 >
-(
-Initial
-Code
-)
 #
 #
 Alternatively
@@ -232,6 +250,7 @@ terms
 of
 #
 either
+of
 the
 GNU
 General
@@ -247,8 +266,8 @@ the
 GPL
 "
 )
-or
 #
+or
 the
 GNU
 Lesser
@@ -406,18 +425,178 @@ BLOCK
 *
 *
 *
-TIERS
-+
+DEPTH
 =
-js
-tier_js_dirs
-+
+.
+.
+/
+.
+.
+topsrcdir
 =
-\
+top_srcdir
+srcdir
+=
+srcdir
+VPATH
+=
+srcdir
+include
+(
+DEPTH
+)
+/
+config
+/
+autoconf
+.
+mk
+JS_OBJDIR
+=
+(
+DEPTH
+)
+/
 js
 /
 src
-\
+JS_CONFIG
+=
 (
-NULL
+DIST
+)
+/
+bin
+/
+js
+-
+config
+include
+(
+topsrcdir
+)
+/
+config
+/
+rules
+.
+mk
+#
+These
+rules
+assume
+that
+we
+configured
+js
+with
+an
+appropriate
+bindir
+#
+libdir
+and
+includedir
+so
+that
+the
+'
+make
+install
+'
+will
+put
+things
+#
+mostly
+in
+the
+right
+places
+.
+The
+install
+-
+runtime
+-
+libs
+target
+takes
+#
+care
+of
+getting
+the
+needed
+libraries
+into
+the
+'
+bin
+'
+directory
+as
+#
+well
+as
+the
+'
+lib
+'
+directory
+.
+export
+:
+:
+(
+MAKE
+)
+-
+C
+(
+JS_OBJDIR
+)
+install
+(
+MAKE
+)
+-
+C
+(
+JS_OBJDIR
+)
+install
+-
+runtime
+-
+libs
+libdir
+=
+(
+DIST
+)
+/
+bin
+(
+INSTALL
+)
+(
+IFLAGS2
+)
+(
+JS_CONFIG
+)
+(
+SDK_BIN_DIR
+)
+check
+:
+:
+(
+MAKE
+)
+-
+C
+(
+JS_OBJDIR
 )
