--- a/configure.in
+++ b/configure.in
@@ -1301,7 +1301,7 @@ PANGO_VERSION
 =
 1
 .
-14
+10
 .
 0
 GTK2_VERSION
@@ -71076,6 +71076,132 @@ mk
 .
 bak
 fi
+#
+Run
+the
+SpiderMonkey
+'
+configure
+'
+script
+.
+dist
+=
+MOZ_BUILD_ROOT
+/
+dist
+ac_configure_args
+=
+"
+_SUBDIR_CONFIG_ARGS
+"
+ac_configure_args
+=
+"
+ac_configure_args
+-
+-
+enable
+-
+threadsafe
+"
+ac_configure_args
+=
+"
+ac_configure_args
+-
+-
+with
+-
+nspr
+-
+cflags
+=
+'
+NSPR_CFLAGS
+'
+"
+ac_configure_args
+=
+"
+ac_configure_args
+-
+-
+with
+-
+nspr
+-
+libs
+=
+'
+NSPR_LIBS
+'
+"
+ac_configure_args
+=
+"
+ac_configure_args
+-
+-
+includedir
+=
+dist
+/
+include
+"
+ac_configure_args
+=
+"
+ac_configure_args
+-
+-
+bindir
+=
+dist
+/
+bin
+"
+ac_configure_args
+=
+"
+ac_configure_args
+-
+-
+libdir
+=
+dist
+/
+lib
+"
+if
+test
+"
+MOZ_MEMORY
+"
+;
+then
+ac_configure_args
+=
+"
+ac_configure_args
+-
+-
+enable
+-
+jemalloc
+"
+fi
+AC_OUTPUT_SUBDIRS
+(
+js
+/
+src
+)
+ac_configure_args
+=
+"
+_SUBDIR_CONFIG_ARGS
+"
 fi
 #
 COMPILE_ENVIRONMENT
