--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -401,16 +401,15 @@ BLOCK
 DEPTH
 =
 .
-.
-/
-.
-.
 topsrcdir
 =
 top_srcdir
 srcdir
 =
 srcdir
+DIRS
+=
+config
 include
 (
 DEPTH
@@ -949,7 +948,7 @@ jsdtracef
 .
 c
 endif
-EXPORTS
+INSTALLED_HEADERS
 =
 \
 jsautocfg
@@ -1157,7 +1156,7 @@ srcdir
 )
 /
 nanojit
-EXPORTS
+INSTALLED_HEADERS
 +
 =
 \
@@ -1272,7 +1271,7 @@ DJS_TRACER
 endif
 ifdef
 HAVE_DTRACE
-EXPORTS
+INSTALLED_HEADERS
 +
 =
 \
@@ -1303,7 +1302,7 @@ OS_ARCH
 )
 )
 )
-EXPORTS
+INSTALLED_HEADERS
 +
 =
 jscpucfg
@@ -2577,6 +2576,12 @@ cpp
 jsopcode
 .
 tbl
+export
+:
+:
+jsautocfg
+.
+h
 ifeq
 (
 (
@@ -2953,6 +2958,631 @@ HOST_OUTOPTION
 )
 <
 endif
+endif
+#
+Compute
+the
+linker
+flags
+that
+programs
+linking
+against
+SpiderMonkey
+should
+#
+pass
+to
+get
+SpiderMonkey
+and
+its
+dependencies
+beyond
+just
+the
+-
+L
+and
+-
+l
+#
+for
+the
+SpiderMonkey
+library
+itself
+.
+#
+-
+EXTRA_DSO_LDOPTS
+includes
+the
+NSPR
+-
+L
+and
+-
+l
+flags
+.
+#
+-
+OS_LIBS
+includes
+libraries
+selected
+by
+the
+configure
+script
+.
+#
+-
+EXTRA_LIBS
+includes
+libraries
+selected
+by
+this
+Makefile
+.
+JS_CONFIG_LIBS
+=
+(
+EXTRA_DSO_LDOPTS
+)
+(
+OS_LIBS
+)
+(
+EXTRA_LIBS
+)
+#
+The
+configure
+script
+invokes
+this
+rule
+explicitly
+at
+configure
+time
+!
+#
+It
+'
+s
+important
+that
+js
+-
+config
+be
+ready
+by
+the
+time
+we
+'
+re
+done
+#
+configuring
+because
+we
+may
+be
+running
+other
+configure
+scripts
+that
+#
+would
+like
+to
+run
+js
+-
+config
+themselves
+before
+js
+is
+built
+.
+#
+#
+This
+file
+and
+rules
+.
+mk
+go
+through
+a
+certain
+amount
+of
+work
+to
+decide
+#
+which
+libraries
+to
+build
+what
+to
+name
+them
+and
+what
+flags
+to
+pass
+#
+when
+linking
+them
+(
+and
+thus
+what
+flags
+its
+own
+clients
+must
+pass
+)
+.
+#
+All
+this
+information
+needs
+to
+go
+into
+the
+js
+-
+config
+script
+.
+To
+#
+avoid
+trying
+to
+re
+-
+compute
+all
+that
+in
+the
+configure
+script
+we
+just
+#
+have
+the
+configure
+script
+generate
+this
+Makefile
+and
+then
+invoke
+#
+this
+rule
+.
+at
+=
+js
+-
+config
+:
+js
+-
+config
+.
+in
+Makefile
+(
+DEPTH
+)
+/
+config
+/
+autoconf
+.
+mk
+(
+topsrcdir
+)
+/
+config
+/
+config
+.
+mk
+(
+topsrcdir
+)
+/
+config
+/
+rules
+.
+mk
+rm
+-
+f
+js
+-
+config
+.
+tmp
+sed
+<
+<
+>
+js
+-
+config
+.
+tmp
+\
+-
+e
+'
+s
+|
+(
+at
+)
+prefix
+(
+at
+)
+|
+(
+prefix
+)
+|
+'
+\
+-
+e
+'
+s
+|
+(
+at
+)
+exec_prefix
+(
+at
+)
+|
+(
+exec_prefix
+)
+|
+'
+\
+-
+e
+'
+s
+|
+(
+at
+)
+includedir
+(
+at
+)
+|
+(
+includedir
+)
+|
+'
+\
+-
+e
+'
+s
+|
+(
+at
+)
+libdir
+(
+at
+)
+|
+(
+libdir
+)
+|
+'
+\
+-
+e
+'
+s
+|
+(
+at
+)
+MOZILLA_VERSION
+(
+at
+)
+|
+(
+MOZILLA_VERSION
+)
+|
+'
+\
+-
+e
+'
+s
+|
+(
+at
+)
+LIBRARY_NAME
+(
+at
+)
+|
+(
+LIBRARY_NAME
+)
+|
+'
+\
+-
+e
+'
+s
+|
+(
+at
+)
+NSPR_CFLAGS
+(
+at
+)
+|
+(
+NSPR_CFLAGS
+)
+|
+'
+\
+-
+e
+'
+s
+|
+(
+at
+)
+JS_CONFIG_LIBS
+(
+at
+)
+|
+(
+JS_CONFIG_LIBS
+)
+|
+'
+\
+-
+e
+'
+s
+|
+(
+at
+)
+MOZ_JS_LIBS
+(
+at
+)
+|
+(
+MOZ_JS_LIBS
+)
+|
+'
+\
+&
+&
+mv
+js
+-
+config
+.
+tmp
+&
+&
+chmod
++
+x
+SCRIPTS
+=
+js
+-
+config
+install
+:
+:
+(
+INSTALLED_HEADERS
+)
+(
+SYSINSTALL
+)
+(
+IFLAGS1
+)
+^
+(
+includedir
+)
+/
+(
+MODULE
+)
+install
+:
+:
+(
+SCRIPTS
+)
+(
+PROGRAM
+)
+(
+SYSINSTALL
+)
+(
+IFLAGS2
+)
+^
+(
+bindir
+)
+#
+The
+Mozilla
+top
+-
+level
+makefiles
+use
+install
+-
+runtime
+-
+libs
+directly
+to
+#
+place
+an
+additional
+copy
+of
+the
+libraries
+in
+the
+'
+dist
+/
+bin
+'
+#
+directory
+.
+install
+:
+:
+install
+-
+runtime
+-
+libs
+install
+-
+runtime
+-
+libs
+:
+:
+(
+LIBRARY
+)
+(
+SHARED_LIBRARY
+)
+(
+IMPORT_LIBRARY
+)
+ifneq
+(
+(
+LIBRARY
+)
+)
+(
+SYSINSTALL
+)
+(
+IFLAGS1
+)
+(
+LIBRARY
+)
+(
+libdir
+)
+endif
+ifneq
+(
+(
+SHARED_LIBRARY
+)
+)
+(
+SYSINSTALL
+)
+(
+IFLAGS2
+)
+(
+SHARED_LIBRARY
+)
+(
+libdir
+)
+endif
+ifneq
+(
+(
+IMPORT_LIBRARY
+)
+)
+(
+SYSINSTALL
+)
+(
+IFLAGS2
+)
+(
+IMPORT_LIBRARY
+)
+(
+libdir
+)
 endif
 #
 Extra
