Bug 97954: Compare SpiderMonkey's copies of build files with originals at check time. r=luser
SpiderMonkey now has its own copy of some of the files from ./config
and ./build.  Since there is a decent amount of churn in that area, I
don't want it to become a burden to make merges back and forth.  This
patch adds a comment explaining the 'identical if present' policy, and
runs a script to verify that it's actually being observed.

UltraBlame original commit: 890e122872e743f1930709feacadbd1da80162c4

--- a/configure.in
+++ b/configure.in
@@ -71169,6 +71169,22 @@ dist
 /
 lib
 "
+ac_configure_args
+=
+"
+ac_configure_args
+-
+-
+with
+-
+sync
+-
+build
+-
+files
+=
+srcdir
+"
 if
 test
 "
