--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -1161,21 +1161,9 @@ dnl
 =
 =
 =
-MOZJPEG
-=
-62
-MOZPNG
-=
-10217
-MOZZLIB
-=
-0x1230
 NSPR_VERSION
 =
 4
-NSS_VERSION
-=
-3
 dnl
 Set
 the
@@ -15948,44 +15936,6 @@ DYNAMICBASE
 fi
 fi
 fi
-MOZ_JPEG_LIBS
-=
-'
-(
-call
-EXPAND_LIBNAME_PATH
-jpeg
-(
-MOZ_BITS
-)
-(
-VERSION_NUMBER
-)
-(
-DEPTH
-)
-/
-jpeg
-)
-'
-MOZ_PNG_LIBS
-=
-'
-(
-call
-EXPAND_LIBNAME_PATH
-png
-(
-DEPTH
-)
-/
-modules
-/
-libimg
-/
-png
-)
-'
 AC_DEFINE
 (
 HAVE_SNPRINTF
@@ -41395,6 +41345,82 @@ then
 MOZ_COMPONENTS_VERSION_SCRIPT_LDFLAGS
 =
 fi
+MOZ_ARG_WITH_STRING
+(
+sync
+-
+build
+-
+files
+[
+-
+-
+with
+-
+sync
+-
+build
+-
+files
+=
+DIR
+Check
+that
+files
+in
+'
+config
+'
+and
+'
+build
+'
+match
+their
+originals
+in
+'
+DIR
+/
+config
+'
+and
+'
+DIR
+/
+build
+'
+.
+This
+helps
+keep
+the
+SpiderMonkey
+build
+machinery
+in
+sync
+with
+Mozilla
+'
+s
+on
+which
+it
+is
+based
+.
+]
+[
+MOZ_SYNC_BUILD_FILES
+=
+withval
+]
+)
+AC_SUBST
+(
+MOZ_SYNC_BUILD_FILES
+)
 dnl
 =
 =
