--- a/content/html/document/src/Makefile.in
+++ b/content/html/document/src/Makefile.in
@@ -502,15 +502,15 @@ nsHTMLDocument
 .
 cpp
 \
+nsImageDocument
+.
+cpp
+\
 nsMediaDocument
 .
 cpp
 \
 nsPluginDocument
-.
-cpp
-\
-nsImageDocument
 .
 cpp
 \
@@ -525,6 +525,15 @@ cpp
 (
 NULL
 )
+ifdef
+MOZ_MEDIA
+CPPSRCS
++
+=
+nsVideoDocument
+.
+cpp
+endif
 EXPORTS
 =
 \
