bug 461395 - add support for PARALLEL_DIRS to build system, parallelize content. r=bsmedberg
UltraBlame original commit: 80406c10f79550033c169b537db21669d3aef401

--- a/content/Makefile.in
+++ b/content/Makefile.in
@@ -409,7 +409,7 @@ mk
 MODULE
 =
 content
-DIRS
+PARALLEL_DIRS
 =
 base
 canvas
@@ -420,7 +420,7 @@ xbl
 xslt
 ifdef
 MOZ_MEDIA
-DIRS
+PARALLEL_DIRS
 +
 =
 \
@@ -432,26 +432,26 @@ NULL
 endif
 ifdef
 MOZ_SVG
-DIRS
+PARALLEL_DIRS
 +
 =
 svg
 endif
 ifdef
 MOZ_XTF
-DIRS
+PARALLEL_DIRS
 +
 =
 xtf
 endif
 ifdef
 MOZ_MATHML
-DIRS
+PARALLEL_DIRS
 +
 =
 mathml
 endif
-DIRS
+PARALLEL_DIRS
 +
 =
 events
