Bug 462405: don't run subconfigures (fixes build bustage) when building --with-libxul-sdk, r=jimb, sr=bsmedberg
UltraBlame original commit: 47c5a9ca37b503d39443c7cb3bfddbb0a1353427

--- a/configure.in
+++ b/configure.in
@@ -70705,10 +70705,27 @@ unset
 MAKEFILES
 unset
 CONFIG_FILES
+#
+No
+need
+to
+run
+subconfigures
+when
+building
+with
+LIBXUL_SDK_DIR
 if
 test
 "
 COMPILE_ENVIRONMENT
+"
+-
+a
+-
+z
+"
+LIBXUL_SDK_DIR
 "
 ;
 then
@@ -71217,3 +71234,7 @@ _SUBDIR_CONFIG_ARGS
 fi
 #
 COMPILE_ENVIRONMENT
+&
+&
+!
+LIBXUL_SDK_DIR
