--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -575,6 +575,26 @@ feed_tab
 .
 html
 \
+browser_pluginnotification
+.
+js
+\
+plugin_unknown
+.
+html
+\
+plugin_test
+.
+html
+\
+plugin_both
+.
+html
+\
+plugin_both2
+.
+html
+\
 (
 NULL
 )
