Bug 462215 - javascript autoconf busted on windows mobile. r=ted
UltraBlame original commit: 56e84df2b796149eebc23b7101db43d916b8ffc1

--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -2111,336 +2111,6 @@ COMPILE_ENVIRONMENT
 "
 ;
 then
-dnl
-Do
-some
-special
-WinCE
-toolchain
-stuff
-case
-"
-target
-"
-in
-*
-wince
-)
-echo
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
-echo
-Building
-Windows
-CE
-Shunt
-Library
-and
-Tool
-Chain
-echo
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
-ac_exeext
-=
-.
-exe
-echo
--
-n
-"
-#
-define
-TOPSRCDIR
-\
-"
-"
->
-srcdir
-/
-build
-/
-wince
-/
-tools
-/
-topsrcdir
-.
-h
-echo
-cd
-"
-_topsrcdir
-"
-&
-&
-pwd
--
-W
-|
-tr
-'
-\
-n
-'
-'
-\
-"
-'
->
->
-srcdir
-/
-build
-/
-wince
-/
-tools
-/
-topsrcdir
-.
-h
-make
--
-C
-srcdir
-/
-build
-/
-wince
-/
-tools
-echo
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
-;
-;
-esac
 if
 test
 -
@@ -5477,6 +5147,24 @@ fi
 fi
 #
 COMPILE_ENVIRONMENT
+if
+test
+"
+cross_compiling
+"
+=
+"
+yes
+"
+;
+then
+CROSS_COMPILE
+=
+1
+else
+CROSS_COMPILE
+=
+fi
 AC_SUBST
 (
 MIDL_FLAGS
@@ -9870,6 +9558,9 @@ v
 ;
 WINCE
 )
+WINCE
+=
+1
 OS_ARCH
 =
 WINCE
@@ -15099,6 +14790,10 @@ lib
 ZIP
 =
 zip
+AC_DEFINE
+(
+WINCE
+)
 AC_DEFINE
 (
 HAVE_SNPRINTF
