--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -564,12 +564,40 @@ OS_ARCH
 )
 WINNT
 )
+ifdef
+WINCE
+#
+-
+GL
+is
+not
+supported
+on
+windows
+mobile
+while
+we
+are
+using
+the
+arm
+-
+wince
+-
+link
+command
+MODULE_OPTIMIZE_FLAGS
+=
+-
+O2
+else
 MODULE_OPTIMIZE_FLAGS
 =
 -
 O2
 -
 GL
+endif
 endif
 endif
 ifeq
