Bug 456439 - add about:rights and a "Know Your Rights" infobar to Firefox. r=gavin, ui-r=beltzner
UltraBlame original commit: a131999fa900eb305d4c71cbe90f2bbf8f53efc4

--- a/browser/base/Makefile.in
+++ b/browser/base/Makefile.in
@@ -663,3 +663,20 @@ DCONTEXT_COPY_IMAGE_CONTENTS
 =
 1
 endif
+ifneq
+(
+(
+BUILD_OFFICIAL
+)
+(
+MOZILLA_OFFICIAL
+)
+)
+DEFINES
++
+=
+-
+DOFFICIAL_BUILD
+=
+1
+endif
