bug 462350 - Refactor and rename test_bug428479.html to test_aria_role_equation.html, r=surkov
UltraBlame original commit: 7c03312dd190eadb91ee867ce4a119ad4e9cdc97

--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -494,6 +494,10 @@ test_aria_role_article
 .
 html
 \
+test_aria_role_equation
+.
+html
+\
 test_bug368835
 .
 xul
@@ -634,10 +638,6 @@ xul
 testTextboxes
 .
 js
-\
-test_bug428479
-.
-html
 \
 test_bug429285
 .
