Bug 462381 - Build layout directories in parallel r=ted sr=roc
UltraBlame original commit: 7aeaf064ad9f971882102c90106643663dddd95f

--- a/layout/Makefile.in
+++ b/layout/Makefile.in
@@ -409,7 +409,7 @@ mk
 MODULE
 =
 layout
-DIRS
+PARALLEL_DIRS
 =
 \
 style
@@ -423,37 +423,71 @@ forms
 tables
 \
 xul
+/
+base
+/
+public
+\
+xul
+/
+base
+/
+src
 \
 (
 NULL
 )
 ifdef
 NS_PRINTING
-DIRS
+PARALLEL_DIRS
 +
 =
 printing
 endif
 ifdef
 MOZ_MATHML
-DIRS
+PARALLEL_DIRS
 +
 =
+\
 mathml
+/
+content
+/
+src
+\
+mathml
+/
+base
+/
+src
+\
+(
+NULL
+)
 endif
 ifdef
 MOZ_SVG
-DIRS
+PARALLEL_DIRS
 +
 =
 svg
+/
+base
+/
+src
 endif
 ifndef
 MOZ_NO_INSPECTOR_APIS
-DIRS
+PARALLEL_DIRS
 +
 =
 inspector
+/
+public
+inspector
+/
+src
 endif
 DIRS
 +
@@ -461,6 +495,23 @@ DIRS
 build
 ifdef
 ENABLE_TESTS
+PARALLEL_DIRS
++
+=
+\
+xul
+/
+test
+\
+xul
+/
+base
+/
+test
+\
+(
+NULL
+)
 TOOL_DIRS
 +
 =
