Bug 462467 - js/src/configure fails when building --with-system-nspr; r=ted.mielczarek
UltraBlame original commit: ad5f67dc260100852434899edbb7d4eb874df8af

--- a/configure.in
+++ b/configure.in
@@ -71118,6 +71118,15 @@ enable
 -
 threadsafe
 "
+if
+test
+-
+z
+"
+MOZ_NATIVE_NSPR
+"
+;
+then
 ac_configure_args
 =
 "
@@ -71150,6 +71159,7 @@ libs
 NSPR_LIBS
 '
 "
+fi
 ac_configure_args
 =
 "
