Add tag soup HTML parser tests to mochitest suite. b=458563 r+sr=mrbkap
UltraBlame original commit: 2c00478d356a7fea6b01d457732bcf4567d3c74d

--- a/parser/htmlparser/tests/mochitest/Makefile.in
+++ b/parser/htmlparser/tests/mochitest/Makefile.in
@@ -459,7 +459,15 @@ html5_tree_construction_exceptions
 .
 js
 \
+htmltagsoup_dat1
+.
+txt
+\
 test_html5_tree_construction
+.
+html
+\
+test_htmltagsoup
 .
 html
 \
