Bug 455906: Support severities for blocklist entries. r=robstrong, r=jst
UltraBlame original commit: bbccbf2c74562ce6307792746d4126a9b1facb76

--- a/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
+++ b/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
@@ -1479,6 +1479,12 @@ INSTALLERROR_RESTRICTED
 9
 ;
 const
+INSTALLERROR_SOFTBLOCKED
+=
+-
+10
+;
+const
 MODE_RDONLY
 =
 0x01
@@ -5402,51 +5408,62 @@ Shows
 a
 dialog
 for
+a
 blocklisted
-items
+item
 .
-*
-param
+For
+soft
+blocked
 items
-*
-An
-array
-of
-nsIUpdateItems
-.
-*
-param
-fromInstall
-*
-Whether
 this
-is
-called
-from
-an
-install
-or
-from
-the
-blocklist
+will
 *
-background
-check
+return
+true
+if
+the
+item
+should
+still
+be
+installed
+*
+param
+item
+*
+The
+nsIUpdateItem
+that
+is
+blocklisted
+*
+param
+softblocked
+*
+True
+if
+this
+item
+is
+only
+soft
+blocked
+and
+may
+still
+be
+installed
 .
 *
 /
 function
 showBlocklistMessage
 (
-items
-fromInstall
+item
+softblocked
 )
 {
-var
-win
-=
-null
-;
 var
 params
 =
@@ -5477,13 +5494,11 @@ params
 SetInt
 (
 0
-(
-fromInstall
+softblocked
 ?
 1
 :
 0
-)
 )
 ;
 params
@@ -5491,82 +5506,33 @@ params
 SetInt
 (
 1
-items
-.
-length
+0
 )
 ;
 params
 .
 SetNumberStrings
 (
-items
-.
-length
-*
-2
+1
 )
 ;
-for
-(
-var
-i
-=
-0
-;
-i
-<
-items
-.
-length
-;
-+
-+
-i
-)
 params
 .
 SetString
 (
-i
-items
-[
-i
-]
+0
+item
 .
 name
 +
 "
 "
 +
-items
-[
-i
-]
+item
 .
 version
 )
 ;
-/
-/
-if
-this
-was
-initiated
-from
-an
-install
-try
-to
-find
-the
-appropriate
-manager
-if
-(
-fromInstall
-)
-{
 var
 wm
 =
@@ -5594,6 +5560,7 @@ Ci
 nsIWindowMediator
 )
 ;
+var
 win
 =
 wm
@@ -5607,7 +5574,6 @@ Manager
 "
 )
 ;
-}
 var
 ww
 =
@@ -5652,6 +5618,21 @@ titlebar
 "
 params
 )
+;
+return
+params
+.
+GetInt
+(
+1
+)
+=
+=
+0
+?
+false
+:
+true
 ;
 }
 /
@@ -20194,6 +20175,57 @@ id
 ;
 }
 else
+if
+(
+installData
+.
+error
+=
+=
+INSTALLERROR_SOFTBLOCKED
+)
+{
+LOG
+(
+"
+.
+.
+.
+success
+item
+installed
+but
+is
+soft
+blocked
+item
+will
+be
+disabled
+"
+)
+;
+callback
+(
+installManifest
+installData
+.
+id
+location
+installData
+.
+type
+)
+;
+this
+.
+disableItem
+(
+id
+)
+;
+}
+else
 {
 /
 *
@@ -30117,11 +30149,12 @@ Ci
 nsIBlocklistService
 )
 ;
-if
-(
+var
+state
+=
 gBlocklist
 .
-isAddonBlocklisted
+getAddonBlocklistState
 (
 installData
 .
@@ -30129,15 +30162,42 @@ id
 installData
 .
 version
-null
-null
 )
+;
+if
+(
+state
+=
+=
+Ci
+.
+nsIBlocklistService
+.
+STATE_BLOCKED
 )
 installData
 .
 error
 =
 INSTALLERROR_BLOCKLISTED
+;
+else
+if
+(
+state
+=
+=
+Ci
+.
+nsIBlocklistService
+.
+STATE_SOFTBLOCKED
+)
+installData
+.
+error
+=
+INSTALLERROR_SOFTBLOCKED
 ;
 return
 installData
@@ -31863,7 +31923,7 @@ xpi
 checkForUpdates
 :
 function
-EM_checkForUpdates
+IncObs_checkForUpdates
 (
 item
 installManifest
@@ -31949,7 +32009,7 @@ idl
 onUpdateStarted
 :
 function
-EM_onUpdateStarted
+IncObs_onUpdateStarted
 (
 )
 {
@@ -31979,7 +32039,7 @@ idl
 onUpdateEnded
 :
 function
-EM_onUpdateEnded
+IncObs_onUpdateEnded
 (
 )
 {
@@ -32009,7 +32069,7 @@ idl
 onAddonUpdateStarted
 :
 function
-EM_onAddonUpdateStarted
+IncObs_onAddonUpdateStarted
 (
 addon
 )
@@ -32080,7 +32140,7 @@ idl
 onAddonUpdateEnded
 :
 function
-EM_onAddonUpdateEnded
+IncObs_onAddonUpdateEnded
 (
 addon
 status
@@ -33212,6 +33272,28 @@ performed
 break
 ;
 case
+INSTALLERROR_SOFTBLOCKED
+:
+if
+(
+!
+showBlocklistMessage
+(
+installData
+true
+)
+)
+break
+;
+/
+/
+Fall
+through
+to
+continue
+the
+install
+case
 INSTALLERROR_SUCCESS
 :
 /
@@ -34058,10 +34140,8 @@ installed
 ;
 showBlocklistMessage
 (
-[
 installData
-]
-true
+false
 )
 ;
 break
@@ -39443,93 +39523,55 @@ platformVersion
 *
 *
 *
-Checks
-for
-changes
-to
-the
-blocklist
-using
-the
-local
-blocklist
-file
-*
-application
-disables
-/
-enables
-items
-that
-have
-been
-added
-/
-removed
-from
-*
-the
-blocklist
-and
-if
-there
-are
-additions
-to
-the
-blocklist
-this
-will
-*
-inform
-the
-user
-by
-displaying
-a
-list
-of
-the
-items
-added
+See
+nsIExtensionManager
 .
-*
-*
-XXXrstrong
--
-this
-method
-is
-not
-terribly
-useful
-and
-was
-added
-so
-we
-can
-*
-trigger
-this
-check
-from
-the
-additional
-timer
-used
-by
-blocklisting
-.
+idl
 *
 /
-checkForBlocklistChanges
+updateAndGetNewBlocklistedItems
 :
 function
-EM_checkForBlocklistChanges
+EM_updateAndGetNewBlocklistedItems
 (
+itemCount
 )
 {
+if
+(
+!
+gBlocklist
+)
+gBlocklist
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+extensions
+/
+blocklist
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsIBlocklistService
+)
+;
+var
+list
+=
+[
+]
+;
 var
 ds
 =
@@ -39581,6 +39623,277 @@ i
 .
 id
 ;
+/
+/
+Get
+whether
+the
+add
+-
+on
+is
+currently
+disabled
+or
+set
+to
+be
+disabled
+.
+var
+appDisabled
+=
+(
+ds
+.
+getItemProperty
+(
+id
+"
+appDisabled
+"
+)
+=
+=
+"
+true
+"
+|
+|
+ds
+.
+getItemProperty
+(
+id
+"
+appDisabled
+"
+)
+=
+=
+OP_NEEDS_DISABLE
+)
+;
+var
+userDisabled
+=
+(
+ds
+.
+getItemProperty
+(
+id
+"
+userDisabled
+"
+)
+=
+=
+"
+true
+"
+|
+|
+ds
+.
+getItemProperty
+(
+id
+"
+userDisabled
+"
+)
+=
+=
+OP_NEEDS_DISABLE
+)
+;
+var
+usable
+=
+this
+.
+_isUsableItem
+(
+id
+)
+;
+var
+state
+=
+gBlocklist
+.
+getAddonBlocklistState
+(
+items
+[
+i
+]
+.
+id
+items
+[
+i
+]
+.
+version
+)
+;
+/
+/
+We
+only
+return
+items
+that
+are
+now
+blocked
+or
+to
+be
+warned
+about
+and
+aren
+'
+t
+/
+/
+already
+disabled
+for
+some
+reason
+.
+if
+(
+!
+appDisabled
+&
+&
+!
+userDisabled
+&
+&
+state
+!
+=
+Ci
+.
+nsIBlocklistService
+.
+STATE_NOT_BLOCKED
+)
+list
+.
+push
+(
+items
+[
+i
+]
+)
+;
+/
+/
+Update
+the
+appDisabled
+status
+based
+on
+the
+new
+blocked
+state
+if
+(
+usable
+)
+this
+.
+_appEnableItem
+(
+id
+)
+;
+else
+this
+.
+_appDisableItem
+(
+id
+)
+;
+/
+/
+If
+the
+item
+was
+appDisabled
+and
+is
+now
+usable
+then
+it
+is
+something
+/
+/
+that
+is
+no
+longer
+hard
+blocked
+.
+If
+it
+is
+still
+to
+be
+warned
+about
+then
+/
+/
+just
+user
+disable
+it
+.
+if
+(
+appDisabled
+&
+&
+usable
+&
+&
+!
+userDisabled
+&
+&
+state
+=
+=
+Ci
+.
+nsIBlocklistService
+.
+STATE_SOFTBLOCKED
+)
+this
+.
+disableItem
+(
+id
+)
+;
 ds
 .
 updateProperty
@@ -39591,94 +39904,27 @@ blocklisted
 "
 )
 ;
-if
-(
-this
+ds
 .
-_isUsableItem
+updateProperty
 (
 id
-)
-)
-this
-.
-_appEnableItem
-(
-id
+"
+blocklistedsoft
+"
 )
 ;
 }
-items
+itemCount
+.
+value
 =
-ds
-.
-getBlocklistedItemList
-(
-null
-null
-Ci
-.
-nsIUpdateItem
-.
-TYPE_ANY
-false
-)
-;
-for
-(
-i
-=
-0
-;
-i
-<
-items
+list
 .
 length
 ;
-+
-+
-i
-)
-this
-.
-_appDisableItem
-(
-items
-[
-i
-]
-.
-id
-)
-;
-/
-/
-show
-the
-blocklist
-notification
-window
-if
-there
-are
-new
-blocklist
-items
-.
-if
-(
-items
-.
-length
->
-0
-)
-showBlocklistMessage
-(
-items
-false
-)
+return
+list
 ;
 }
 /
@@ -39960,58 +40206,10 @@ countRef
 }
 /
 *
-*
-*
-Retrieves
-a
-list
-of
-nsIUpdateItems
-of
-items
-matching
-the
-specified
-type
+See
+nsIExtensionManager
 .
-*
-param
-type
-*
-The
-type
-of
-item
-to
-return
-.
-*
-param
-countRef
-*
-The
-XPCJS
-reference
-to
-the
-number
-of
-items
-returned
-.
-*
-returns
-An
-array
-of
-nsIUpdateItems
-matching
-the
-id
-/
-type
-filter
-.
+idl
 *
 /
 getItemList
@@ -45104,6 +45302,27 @@ Ci
 nsIBlocklistService
 )
 ;
+/
+/
+Denies
+updates
+that
+are
+hard
+blocked
+soft
+blocked
+items
+will
+be
+warned
+/
+/
+about
+during
+the
+install
+.
 if
 (
 gBlocklist
@@ -45116,8 +45335,12 @@ id
 aRemoteItem
 .
 version
-null
-null
+this
+.
+_appVersion
+this
+.
+_platformVersion
 )
 )
 return
@@ -52641,336 +52864,6 @@ isCompatible
 (
 this
 item
-appVersion
-platformVersion
-)
-)
-items
-.
-push
-(
-this
-.
-getItemForID
-(
-id
-)
-)
-;
-}
-return
-items
-;
-}
-/
-*
-*
-*
-Retrieves
-a
-list
-of
-items
-that
-will
-be
-blocklisted
-by
-the
-application
-for
-*
-a
-specific
-application
-or
-toolkit
-version
-.
-*
-param
-appVersion
-*
-The
-Version
-of
-the
-application
-to
-check
-the
-blocklist
-against
-.
-*
-param
-platformVersion
-*
-The
-Version
-of
-the
-toolkit
-to
-check
-the
-blocklist
-against
-.
-*
-param
-desiredType
-*
-The
-nsIUpdateItem
-type
-of
-items
-to
-look
-for
-*
-param
-includeAppDisabled
-*
-Whether
-or
-not
-items
-that
-are
-or
-are
-already
-set
-to
-be
-disabled
-*
-by
-the
-app
-on
-next
-restart
-should
-be
-included
-in
-the
-set
-returned
-*
-returns
-An
-array
-of
-nsIUpdateItems
-that
-are
-blocklisted
-with
-the
-application
-*
-or
-toolkit
-version
-supplied
-.
-*
-/
-getBlocklistedItemList
-:
-function
-EMDS_getBlocklistedItemList
-(
-appVersion
-platformVersion
-desiredType
-includeAppDisabled
-)
-{
-if
-(
-!
-gBlocklist
-)
-gBlocklist
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-extensions
-/
-blocklist
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsIBlocklistService
-)
-;
-var
-items
-=
-[
-]
-;
-var
-ctr
-=
-getContainer
-(
-this
-.
-_inner
-this
-.
-_itemRoot
-)
-;
-var
-elements
-=
-ctr
-.
-GetElements
-(
-)
-;
-while
-(
-elements
-.
-hasMoreElements
-(
-)
-)
-{
-var
-item
-=
-elements
-.
-getNext
-(
-)
-.
-QueryInterface
-(
-Ci
-.
-nsIRDFResource
-)
-;
-var
-id
-=
-stripPrefix
-(
-item
-.
-Value
-PREFIX_ITEM_URI
-)
-;
-var
-type
-=
-this
-.
-getItemProperty
-(
-id
-"
-type
-"
-)
-;
-if
-(
-!
-includeAppDisabled
-&
-&
-(
-this
-.
-getItemProperty
-(
-id
-"
-appDisabled
-"
-)
-=
-=
-"
-true
-"
-|
-|
-this
-.
-getItemProperty
-(
-id
-"
-appDisabled
-"
-)
-=
-=
-OP_NEEDS_DISABLE
-)
-)
-continue
-;
-var
-version
-=
-this
-.
-getItemProperty
-(
-id
-"
-version
-"
-)
-;
-if
-(
-type
-!
-=
--
-1
-&
-&
-(
-type
-&
-desiredType
-)
-&
-&
-gBlocklist
-.
-isAddonBlocklisted
-(
-id
-version
 appVersion
 platformVersion
 )
@@ -61705,13 +61598,143 @@ if
 (
 gBlocklist
 .
-isAddonBlocklisted
+getAddonBlocklistState
 (
 id
 version
-null
-null
 )
+=
+=
+Ci
+.
+nsIBlocklistService
+.
+STATE_BLOCKED
+)
+return
+EM_L
+(
+"
+true
+"
+)
+;
+return
+EM_L
+(
+"
+false
+"
+)
+;
+}
+/
+*
+*
+*
+Get
+the
+em
+:
+blocklistedsoft
+property
+(
+whether
+or
+not
+this
+item
+is
+listed
+in
+the
+blocklist
+*
+at
+a
+low
+severity
+)
+*
+/
+_rdfGet_blocklistedsoft
+:
+function
+EMDS__rdfGet_blocklistedsoft
+(
+item
+property
+)
+{
+var
+id
+=
+stripPrefix
+(
+item
+.
+Value
+PREFIX_ITEM_URI
+)
+;
+var
+version
+=
+this
+.
+getItemProperty
+(
+id
+"
+version
+"
+)
+;
+if
+(
+!
+gBlocklist
+)
+gBlocklist
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+extensions
+/
+blocklist
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsIBlocklistService
+)
+;
+if
+(
+gBlocklist
+.
+getAddonBlocklistState
+(
+id
+version
+)
+=
+=
+Ci
+.
+nsIBlocklistService
+.
+STATE_SOFTBLOCKED
 )
 return
 EM_L
