--- a/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
+++ b/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
@@ -1479,12 +1479,6 @@ INSTALLERROR_RESTRICTED
 9
 ;
 const
-INSTALLERROR_SOFTBLOCKED
-=
--
-10
-;
-const
 MODE_RDONLY
 =
 0x01
@@ -5408,62 +5402,51 @@ Shows
 a
 dialog
 for
-a
 blocklisted
-item
-.
-For
-soft
-blocked
 items
-this
-will
+.
 *
-return
-true
-if
+param
+items
+*
+An
+array
+of
+nsIUpdateItems
+.
+*
+param
+fromInstall
+*
+Whether
+this
+is
+called
+from
+an
+install
+or
+from
 the
-item
-should
-still
-be
-installed
+blocklist
 *
-param
-item
-*
-The
-nsIUpdateItem
-that
-is
-blocklisted
-*
-param
-softblocked
-*
-True
-if
-this
-item
-is
-only
-soft
-blocked
-and
-may
-still
-be
-installed
+background
+check
 .
 *
 /
 function
 showBlocklistMessage
 (
-item
-softblocked
+items
+fromInstall
 )
 {
+var
+win
+=
+null
+;
 var
 params
 =
@@ -5494,11 +5477,13 @@ params
 SetInt
 (
 0
-softblocked
+(
+fromInstall
 ?
 1
 :
 0
+)
 )
 ;
 params
@@ -5506,33 +5491,82 @@ params
 SetInt
 (
 1
-0
+items
+.
+length
 )
 ;
 params
 .
 SetNumberStrings
 (
-1
+items
+.
+length
+*
+2
 )
 ;
+for
+(
+var
+i
+=
+0
+;
+i
+<
+items
+.
+length
+;
++
++
+i
+)
 params
 .
 SetString
 (
-0
-item
+i
+items
+[
+i
+]
 .
 name
 +
 "
 "
 +
-item
+items
+[
+i
+]
 .
 version
 )
 ;
+/
+/
+if
+this
+was
+initiated
+from
+an
+install
+try
+to
+find
+the
+appropriate
+manager
+if
+(
+fromInstall
+)
+{
 var
 wm
 =
@@ -5560,7 +5594,6 @@ Ci
 nsIWindowMediator
 )
 ;
-var
 win
 =
 wm
@@ -5574,6 +5607,7 @@ Manager
 "
 )
 ;
+}
 var
 ww
 =
@@ -5618,21 +5652,6 @@ titlebar
 "
 params
 )
-;
-return
-params
-.
-GetInt
-(
-1
-)
-=
-=
-0
-?
-false
-:
-true
 ;
 }
 /
@@ -20175,57 +20194,6 @@ id
 ;
 }
 else
-if
-(
-installData
-.
-error
-=
-=
-INSTALLERROR_SOFTBLOCKED
-)
-{
-LOG
-(
-"
-.
-.
-.
-success
-item
-installed
-but
-is
-soft
-blocked
-item
-will
-be
-disabled
-"
-)
-;
-callback
-(
-installManifest
-installData
-.
-id
-location
-installData
-.
-type
-)
-;
-this
-.
-disableItem
-(
-id
-)
-;
-}
-else
 {
 /
 *
@@ -30149,12 +30117,11 @@ Ci
 nsIBlocklistService
 )
 ;
-var
-state
-=
+if
+(
 gBlocklist
 .
-getAddonBlocklistState
+isAddonBlocklisted
 (
 installData
 .
@@ -30162,42 +30129,15 @@ id
 installData
 .
 version
+null
+null
 )
-;
-if
-(
-state
-=
-=
-Ci
-.
-nsIBlocklistService
-.
-STATE_BLOCKED
 )
 installData
 .
 error
 =
 INSTALLERROR_BLOCKLISTED
-;
-else
-if
-(
-state
-=
-=
-Ci
-.
-nsIBlocklistService
-.
-STATE_SOFTBLOCKED
-)
-installData
-.
-error
-=
-INSTALLERROR_SOFTBLOCKED
 ;
 return
 installData
@@ -31923,7 +31863,7 @@ xpi
 checkForUpdates
 :
 function
-IncObs_checkForUpdates
+EM_checkForUpdates
 (
 item
 installManifest
@@ -32009,7 +31949,7 @@ idl
 onUpdateStarted
 :
 function
-IncObs_onUpdateStarted
+EM_onUpdateStarted
 (
 )
 {
@@ -32039,7 +31979,7 @@ idl
 onUpdateEnded
 :
 function
-IncObs_onUpdateEnded
+EM_onUpdateEnded
 (
 )
 {
@@ -32069,7 +32009,7 @@ idl
 onAddonUpdateStarted
 :
 function
-IncObs_onAddonUpdateStarted
+EM_onAddonUpdateStarted
 (
 addon
 )
@@ -32140,7 +32080,7 @@ idl
 onAddonUpdateEnded
 :
 function
-IncObs_onAddonUpdateEnded
+EM_onAddonUpdateEnded
 (
 addon
 status
@@ -33272,28 +33212,6 @@ performed
 break
 ;
 case
-INSTALLERROR_SOFTBLOCKED
-:
-if
-(
-!
-showBlocklistMessage
-(
-installData
-true
-)
-)
-break
-;
-/
-/
-Fall
-through
-to
-continue
-the
-install
-case
 INSTALLERROR_SUCCESS
 :
 /
@@ -34140,8 +34058,10 @@ installed
 ;
 showBlocklistMessage
 (
+[
 installData
-false
+]
+true
 )
 ;
 break
@@ -39523,55 +39443,93 @@ platformVersion
 *
 *
 *
-See
-nsIExtensionManager
+Checks
+for
+changes
+to
+the
+blocklist
+using
+the
+local
+blocklist
+file
+*
+application
+disables
+/
+enables
+items
+that
+have
+been
+added
+/
+removed
+from
+*
+the
+blocklist
+and
+if
+there
+are
+additions
+to
+the
+blocklist
+this
+will
+*
+inform
+the
+user
+by
+displaying
+a
+list
+of
+the
+items
+added
 .
-idl
+*
+*
+XXXrstrong
+-
+this
+method
+is
+not
+terribly
+useful
+and
+was
+added
+so
+we
+can
+*
+trigger
+this
+check
+from
+the
+additional
+timer
+used
+by
+blocklisting
+.
 *
 /
-updateAndGetNewBlocklistedItems
+checkForBlocklistChanges
 :
 function
-EM_updateAndGetNewBlocklistedItems
+EM_checkForBlocklistChanges
 (
-itemCount
 )
 {
-if
-(
-!
-gBlocklist
-)
-gBlocklist
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-extensions
-/
-blocklist
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsIBlocklistService
-)
-;
-var
-list
-=
-[
-]
-;
 var
 ds
 =
@@ -39623,277 +39581,6 @@ i
 .
 id
 ;
-/
-/
-Get
-whether
-the
-add
--
-on
-is
-currently
-disabled
-or
-set
-to
-be
-disabled
-.
-var
-appDisabled
-=
-(
-ds
-.
-getItemProperty
-(
-id
-"
-appDisabled
-"
-)
-=
-=
-"
-true
-"
-|
-|
-ds
-.
-getItemProperty
-(
-id
-"
-appDisabled
-"
-)
-=
-=
-OP_NEEDS_DISABLE
-)
-;
-var
-userDisabled
-=
-(
-ds
-.
-getItemProperty
-(
-id
-"
-userDisabled
-"
-)
-=
-=
-"
-true
-"
-|
-|
-ds
-.
-getItemProperty
-(
-id
-"
-userDisabled
-"
-)
-=
-=
-OP_NEEDS_DISABLE
-)
-;
-var
-usable
-=
-this
-.
-_isUsableItem
-(
-id
-)
-;
-var
-state
-=
-gBlocklist
-.
-getAddonBlocklistState
-(
-items
-[
-i
-]
-.
-id
-items
-[
-i
-]
-.
-version
-)
-;
-/
-/
-We
-only
-return
-items
-that
-are
-now
-blocked
-or
-to
-be
-warned
-about
-and
-aren
-'
-t
-/
-/
-already
-disabled
-for
-some
-reason
-.
-if
-(
-!
-appDisabled
-&
-&
-!
-userDisabled
-&
-&
-state
-!
-=
-Ci
-.
-nsIBlocklistService
-.
-STATE_NOT_BLOCKED
-)
-list
-.
-push
-(
-items
-[
-i
-]
-)
-;
-/
-/
-Update
-the
-appDisabled
-status
-based
-on
-the
-new
-blocked
-state
-if
-(
-usable
-)
-this
-.
-_appEnableItem
-(
-id
-)
-;
-else
-this
-.
-_appDisableItem
-(
-id
-)
-;
-/
-/
-If
-the
-item
-was
-appDisabled
-and
-is
-now
-usable
-then
-it
-is
-something
-/
-/
-that
-is
-no
-longer
-hard
-blocked
-.
-If
-it
-is
-still
-to
-be
-warned
-about
-then
-/
-/
-just
-user
-disable
-it
-.
-if
-(
-appDisabled
-&
-&
-usable
-&
-&
-!
-userDisabled
-&
-&
-state
-=
-=
-Ci
-.
-nsIBlocklistService
-.
-STATE_SOFTBLOCKED
-)
-this
-.
-disableItem
-(
-id
-)
-;
 ds
 .
 updateProperty
@@ -39904,27 +39591,94 @@ blocklisted
 "
 )
 ;
-ds
+if
+(
+this
 .
-updateProperty
+_isUsableItem
 (
 id
-"
-blocklistedsoft
-"
+)
+)
+this
+.
+_appEnableItem
+(
+id
 )
 ;
 }
-itemCount
-.
-value
+items
 =
-list
+ds
+.
+getBlocklistedItemList
+(
+null
+null
+Ci
+.
+nsIUpdateItem
+.
+TYPE_ANY
+false
+)
+;
+for
+(
+i
+=
+0
+;
+i
+<
+items
 .
 length
 ;
-return
-list
++
++
+i
+)
+this
+.
+_appDisableItem
+(
+items
+[
+i
+]
+.
+id
+)
+;
+/
+/
+show
+the
+blocklist
+notification
+window
+if
+there
+are
+new
+blocklist
+items
+.
+if
+(
+items
+.
+length
+>
+0
+)
+showBlocklistMessage
+(
+items
+false
+)
 ;
 }
 /
@@ -40206,10 +39960,58 @@ countRef
 }
 /
 *
-See
-nsIExtensionManager
+*
+*
+Retrieves
+a
+list
+of
+nsIUpdateItems
+of
+items
+matching
+the
+specified
+type
 .
-idl
+*
+param
+type
+*
+The
+type
+of
+item
+to
+return
+.
+*
+param
+countRef
+*
+The
+XPCJS
+reference
+to
+the
+number
+of
+items
+returned
+.
+*
+returns
+An
+array
+of
+nsIUpdateItems
+matching
+the
+id
+/
+type
+filter
+.
 *
 /
 getItemList
@@ -45302,27 +45104,6 @@ Ci
 nsIBlocklistService
 )
 ;
-/
-/
-Denies
-updates
-that
-are
-hard
-blocked
-soft
-blocked
-items
-will
-be
-warned
-/
-/
-about
-during
-the
-install
-.
 if
 (
 gBlocklist
@@ -45335,12 +45116,8 @@ id
 aRemoteItem
 .
 version
-this
-.
-_appVersion
-this
-.
-_platformVersion
+null
+null
 )
 )
 return
@@ -52864,6 +52641,336 @@ isCompatible
 (
 this
 item
+appVersion
+platformVersion
+)
+)
+items
+.
+push
+(
+this
+.
+getItemForID
+(
+id
+)
+)
+;
+}
+return
+items
+;
+}
+/
+*
+*
+*
+Retrieves
+a
+list
+of
+items
+that
+will
+be
+blocklisted
+by
+the
+application
+for
+*
+a
+specific
+application
+or
+toolkit
+version
+.
+*
+param
+appVersion
+*
+The
+Version
+of
+the
+application
+to
+check
+the
+blocklist
+against
+.
+*
+param
+platformVersion
+*
+The
+Version
+of
+the
+toolkit
+to
+check
+the
+blocklist
+against
+.
+*
+param
+desiredType
+*
+The
+nsIUpdateItem
+type
+of
+items
+to
+look
+for
+*
+param
+includeAppDisabled
+*
+Whether
+or
+not
+items
+that
+are
+or
+are
+already
+set
+to
+be
+disabled
+*
+by
+the
+app
+on
+next
+restart
+should
+be
+included
+in
+the
+set
+returned
+*
+returns
+An
+array
+of
+nsIUpdateItems
+that
+are
+blocklisted
+with
+the
+application
+*
+or
+toolkit
+version
+supplied
+.
+*
+/
+getBlocklistedItemList
+:
+function
+EMDS_getBlocklistedItemList
+(
+appVersion
+platformVersion
+desiredType
+includeAppDisabled
+)
+{
+if
+(
+!
+gBlocklist
+)
+gBlocklist
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+extensions
+/
+blocklist
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsIBlocklistService
+)
+;
+var
+items
+=
+[
+]
+;
+var
+ctr
+=
+getContainer
+(
+this
+.
+_inner
+this
+.
+_itemRoot
+)
+;
+var
+elements
+=
+ctr
+.
+GetElements
+(
+)
+;
+while
+(
+elements
+.
+hasMoreElements
+(
+)
+)
+{
+var
+item
+=
+elements
+.
+getNext
+(
+)
+.
+QueryInterface
+(
+Ci
+.
+nsIRDFResource
+)
+;
+var
+id
+=
+stripPrefix
+(
+item
+.
+Value
+PREFIX_ITEM_URI
+)
+;
+var
+type
+=
+this
+.
+getItemProperty
+(
+id
+"
+type
+"
+)
+;
+if
+(
+!
+includeAppDisabled
+&
+&
+(
+this
+.
+getItemProperty
+(
+id
+"
+appDisabled
+"
+)
+=
+=
+"
+true
+"
+|
+|
+this
+.
+getItemProperty
+(
+id
+"
+appDisabled
+"
+)
+=
+=
+OP_NEEDS_DISABLE
+)
+)
+continue
+;
+var
+version
+=
+this
+.
+getItemProperty
+(
+id
+"
+version
+"
+)
+;
+if
+(
+type
+!
+=
+-
+1
+&
+&
+(
+type
+&
+desiredType
+)
+&
+&
+gBlocklist
+.
+isAddonBlocklisted
+(
+id
+version
 appVersion
 platformVersion
 )
@@ -61598,143 +61705,13 @@ if
 (
 gBlocklist
 .
-getAddonBlocklistState
+isAddonBlocklisted
 (
 id
 version
+null
+null
 )
-=
-=
-Ci
-.
-nsIBlocklistService
-.
-STATE_BLOCKED
-)
-return
-EM_L
-(
-"
-true
-"
-)
-;
-return
-EM_L
-(
-"
-false
-"
-)
-;
-}
-/
-*
-*
-*
-Get
-the
-em
-:
-blocklistedsoft
-property
-(
-whether
-or
-not
-this
-item
-is
-listed
-in
-the
-blocklist
-*
-at
-a
-low
-severity
-)
-*
-/
-_rdfGet_blocklistedsoft
-:
-function
-EMDS__rdfGet_blocklistedsoft
-(
-item
-property
-)
-{
-var
-id
-=
-stripPrefix
-(
-item
-.
-Value
-PREFIX_ITEM_URI
-)
-;
-var
-version
-=
-this
-.
-getItemProperty
-(
-id
-"
-version
-"
-)
-;
-if
-(
-!
-gBlocklist
-)
-gBlocklist
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-extensions
-/
-blocklist
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsIBlocklistService
-)
-;
-if
-(
-gBlocklist
-.
-getAddonBlocklistState
-(
-id
-version
-)
-=
-=
-Ci
-.
-nsIBlocklistService
-.
-STATE_SOFTBLOCKED
 )
 return
 EM_L
