Bug 248970 - Private Browsing mode (global toggle for saving/caching everything) [sessionstore part]; r=zeniko
UltraBlame original commit: 743136ef83d9a0451312327b8d46926b4d583c06

--- a/browser/components/sessionstore/test/browser/Makefile.in
+++ b/browser/components/sessionstore/test/browser/Makefile.in
@@ -449,6 +449,18 @@ mk
 _BROWSER_TEST_FILES
 =
 \
+browser_248970_a
+.
+js
+\
+browser_248970_b
+.
+js
+\
+browser_248970_b_sample
+.
+html
+\
 browser_339445
 .
 js
