Bug 248970 - Private Browsing mode (global toggle for saving/caching everything) [Private Browsing service]; r=mconnor
UltraBlame original commit: 12487541851bbd07ae813cb1d6629a627a24a500

--- a/browser/components/privatebrowsing/test/Makefile.in
+++ b/browser/components/privatebrowsing/test/Makefile.in
@@ -141,10 +141,8 @@ The
 Original
 Code
 is
-the
-Mozilla
-Browser
-code
+Private
+Browsing
 .
 #
 #
@@ -157,9 +155,8 @@ Original
 Code
 is
 #
-Netscape
-Communications
-Corporation
+Ehsan
+Akhgari
 .
 #
 Portions
@@ -173,7 +170,7 @@ Copyright
 (
 C
 )
-2002
+2008
 #
 the
 Initial
@@ -191,11 +188,13 @@ s
 )
 :
 #
-Brian
-Ryner
+Ehsan
+Akhgari
 <
-bryner
-brianryner
+ehsan
+.
+akhgari
+gmail
 .
 com
 >
@@ -216,6 +215,7 @@ terms
 of
 #
 either
+of
 the
 GNU
 General
@@ -231,8 +231,8 @@ the
 GPL
 "
 )
-or
 #
+or
 the
 GNU
 Lesser
@@ -397,6 +397,12 @@ DEPTH
 /
 .
 .
+/
+.
+.
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -406,6 +412,15 @@ srcdir
 VPATH
 =
 srcdir
+relativesrcdir
+=
+browser
+/
+components
+/
+privatebrowsing
+/
+test
 include
 (
 DEPTH
@@ -418,109 +433,18 @@ autoconf
 mk
 MODULE
 =
-browsercomps
-XPIDL_MODULE
+test_privatebrowsing
+XPCSHELL_TESTS
 =
-browsercompsbase
-XPIDLSRCS
+unit
+DIRS
++
 =
-\
-nsIBrowserHandler
-.
-idl
-\
-nsIBrowserGlue
-.
-idl
+browser
 \
 (
 NULL
 )
-EXTRA_PP_COMPONENTS
-=
-\
-nsBrowserContentHandler
-.
-js
-\
-nsBrowserGlue
-.
-js
-\
-aboutRights
-.
-js
-\
-aboutRobots
-.
-js
-\
-(
-NULL
-)
-EXTRA_JS_MODULES
-=
-distribution
-.
-js
-DIRS
-=
-\
-certerror
-\
-dirprovider
-\
-microsummaries
-\
-migration
-\
-preferences
-\
-search
-\
-sessionstore
-\
-shell
-\
-sidebar
-\
-feeds
-\
-places
-\
-privatebrowsing
-\
-(
-NULL
-)
-ifdef
-MOZ_SAFE_BROWSING
-DIRS
-+
-=
-safebrowsing
-endif
-DIRS
-+
-=
-build
-ifneq
-(
-(
-BUILD_OFFICIAL
-)
-(
-MOZILLA_OFFICIAL
-)
-)
-DEFINES
-+
-=
--
-DOFFICIAL_BUILD
-=
-1
-endif
 include
 (
 topsrcdir
