--- a/browser/components/privatebrowsing/src/Makefile.in
+++ b/browser/components/privatebrowsing/src/Makefile.in
@@ -141,10 +141,8 @@ The
 Original
 Code
 is
-the
-Mozilla
-Browser
-code
+Private
+Browsing
 .
 #
 #
@@ -157,9 +155,8 @@ Original
 Code
 is
 #
-Netscape
-Communications
-Corporation
+Ehsan
+Akhgari
 .
 #
 Portions
@@ -173,7 +170,7 @@ Copyright
 (
 C
 )
-2002
+2008
 #
 the
 Initial
@@ -191,11 +188,13 @@ s
 )
 :
 #
-Brian
-Ryner
+Ehsan
+Akhgari
 <
-bryner
-brianryner
+ehsan
+.
+akhgari
+gmail
 .
 com
 >
@@ -397,6 +396,12 @@ DEPTH
 /
 .
 .
+/
+.
+.
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -416,111 +421,11 @@ config
 autoconf
 .
 mk
-MODULE
-=
-browsercomps
-XPIDL_MODULE
-=
-browsercompsbase
-XPIDLSRCS
-=
-\
-nsIBrowserHandler
-.
-idl
-\
-nsIBrowserGlue
-.
-idl
-\
-(
-NULL
-)
 EXTRA_PP_COMPONENTS
 =
-\
-nsBrowserContentHandler
+nsPrivateBrowsingService
 .
 js
-\
-nsBrowserGlue
-.
-js
-\
-aboutRights
-.
-js
-\
-aboutRobots
-.
-js
-\
-(
-NULL
-)
-EXTRA_JS_MODULES
-=
-distribution
-.
-js
-DIRS
-=
-\
-certerror
-\
-dirprovider
-\
-microsummaries
-\
-migration
-\
-preferences
-\
-search
-\
-sessionstore
-\
-shell
-\
-sidebar
-\
-feeds
-\
-places
-\
-privatebrowsing
-\
-(
-NULL
-)
-ifdef
-MOZ_SAFE_BROWSING
-DIRS
-+
-=
-safebrowsing
-endif
-DIRS
-+
-=
-build
-ifneq
-(
-(
-BUILD_OFFICIAL
-)
-(
-MOZILLA_OFFICIAL
-)
-)
-DEFINES
-+
-=
--
-DOFFICIAL_BUILD
-=
-1
-endif
 include
 (
 topsrcdir
