--- a/toolkit/components/places/tests/mochitest/bug_461710/Makefile.in
+++ b/toolkit/components/places/tests/mochitest/bug_461710/Makefile.in
@@ -142,9 +142,9 @@ The
 Original
 Code
 is
-mozilla
-.
-org
+Bug
+461710
+test
 code
 .
 #
@@ -158,9 +158,8 @@ Original
 Code
 is
 #
-Mozilla
-.
-org
+Ehsan
+Akhgari
 .
 #
 Portions
@@ -192,17 +191,19 @@ s
 )
 :
 #
-Boris
-Zbarsky
+Ehsan
+Akhgari
 <
-bzbarsky
-mit
+ehsan
 .
-edu
+akhgari
+gmail
+.
+com
 >
 (
 Original
-author
+Author
 )
 #
 #
@@ -409,6 +410,12 @@ DEPTH
 /
 .
 .
+/
+.
+.
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -427,6 +434,8 @@ components
 places
 /
 tests
+/
+bug_461710
 include
 (
 DEPTH
@@ -437,95 +446,6 @@ config
 autoconf
 .
 mk
-MODULE
-=
-test_places
-XPCSHELL_TESTS
-=
-\
-autocomplete
-\
-background
-\
-sync
-\
-bookmarks
-\
-queries
-\
-unit
-\
-(
-NULL
-)
-#
-Simple
-MochiTests
-MOCHI_TESTS
-=
-mochitest
-/
-test_bug_405924
-.
-html
-\
-mochitest
-/
-test_bug_411966
-.
-html
-\
-mochitest
-/
-test_bug_461710
-.
-html
-\
-(
-NULL
-)
-MOCHI_CONTENT
-=
-mochitest
-/
-prompt_common
-.
-js
-\
-(
-NULL
-)
-DIRS
-=
-\
-chrome
-\
-mochitest
-/
-bug_411966
-\
-mochitest
-/
-bug_461710
-\
-#
-These
-tests
-are
-disabled
-for
-the
-time
-being
-see
-bug
-416066
-#
-browser
-\
-(
-NULL
-)
 include
 (
 topsrcdir
@@ -536,14 +456,25 @@ config
 rules
 .
 mk
+_HTTP_FILES
+=
+\
+visited_page
+.
+html
+\
+link_page
+.
+html
+\
+(
+NULL
+)
 libs
 :
 :
 (
-MOCHI_TESTS
-)
-(
-MOCHI_CONTENT
+_HTTP_FILES
 )
 (
 INSTALL
