Bug 449315 - Support WAV format in <audio> element - r+sr=roc
UltraBlame original commit: 18403769ec19f8d64ddf8e30d6a76468ae5a4fbc

--- a/configure.in
+++ b/configure.in
@@ -34680,6 +34680,11 @@ MOZ_NO_FAST_LOAD
 MOZ_OGG
 =
 1
+MOZ_SYDNEYAUDIO
+=
+MOZ_WAVE
+=
+1
 MOZ_MEDIA
 =
 MOZ_OJI
@@ -42105,7 +42110,7 @@ dnl
 =
 dnl
 =
-Enable
+Disable
 Ogg
 Codecs
 dnl
@@ -42202,9 +42207,316 @@ AC_DEFINE
 (
 MOZ_OGG
 )
+MOZ_SYDNEYAUDIO
+=
+1
 MOZ_MEDIA
 =
 1
+fi
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+=
+Disable
+Wave
+decoder
+support
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+MOZ_ARG_ENABLE_BOOL
+(
+wave
+[
+-
+-
+disable
+-
+wave
+Disable
+Wave
+decoder
+support
+]
+MOZ_WAVE
+=
+MOZ_WAVE
+=
+1
+)
+AC_SUBST
+(
+MOZ_WAVE
+)
+if
+test
+-
+n
+"
+MOZ_WAVE
+"
+;
+then
+AC_DEFINE
+(
+MOZ_WAVE
+)
+MOZ_SYDNEYAUDIO
+=
+1
+MOZ_MEDIA
+=
+1
+fi
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+=
+Handle
+dependent
+SYDNEYAUDIO
+and
+MEDIA
+defines
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+AC_SUBST
+(
+MOZ_SYDNEYAUDIO
+)
+if
+test
+-
+n
+"
+MOZ_SYDNEYAUDIO
+"
+;
+then
+AC_DEFINE
+(
+MOZ_SYDNEYAUDIO
+)
 fi
 AC_SUBST
 (
@@ -42225,9 +42537,133 @@ MOZ_MEDIA
 )
 fi
 dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+=
+Check
+alsa
+availability
+on
+Linux
+if
+using
+sydneyaudio
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
 If
 using
-Ogg
+sydneyaudio
 with
 Linux
 ensure
@@ -42242,7 +42678,7 @@ test
 -
 n
 "
-MOZ_OGG
+MOZ_SYDNEYAUDIO
 "
 ;
 then
