--- a/content/media/video/public/Makefile.in
+++ b/content/media/video/public/Makefile.in
@@ -437,18 +437,10 @@ h
 NULL
 )
 ifdef
-MOZ_OGG
+MOZ_MEDIA
 EXPORTS
 +
 =
-\
-nsAudioStream
-.
-h
-\
-nsChannelReader
-.
-h
 \
 nsChannelToPipeListener
 .
@@ -458,7 +450,49 @@ nsMediaStream
 .
 h
 \
+(
+NULL
+)
+endif
+ifdef
+MOZ_SYDNEYAUDIO
+EXPORTS
++
+=
+\
+nsAudioStream
+.
+h
+\
+(
+NULL
+)
+endif
+ifdef
+MOZ_OGG
+EXPORTS
++
+=
+\
+nsChannelReader
+.
+h
+\
 nsOggDecoder
+.
+h
+\
+(
+NULL
+)
+endif
+ifdef
+MOZ_WAVE
+EXPORTS
++
+=
+\
+nsWaveDecoder
 .
 h
 \
