--- a/content/media/video/src/Makefile.in
+++ b/content/media/video/src/Makefile.in
@@ -509,18 +509,10 @@ cpp
 NULL
 )
 ifdef
-MOZ_OGG
+MOZ_MEDIA
 CPPSRCS
 +
 =
-\
-nsAudioStream
-.
-cpp
-\
-nsChannelReader
-.
-cpp
 \
 nsChannelToPipeListener
 .
@@ -530,7 +522,49 @@ nsMediaStream
 .
 cpp
 \
+(
+NULL
+)
+endif
+ifdef
+MOZ_SYDNEYAUDIO
+CPPSRCS
++
+=
+\
+nsAudioStream
+.
+cpp
+\
+(
+NULL
+)
+endif
+ifdef
+MOZ_OGG
+CPPSRCS
++
+=
+\
+nsChannelReader
+.
+cpp
+\
 nsOggDecoder
+.
+cpp
+\
+(
+NULL
+)
+endif
+ifdef
+MOZ_WAVE
+CPPSRCS
++
+=
+\
+nsWaveDecoder
 .
 cpp
 \
