--- a/configure.in
+++ b/configure.in
@@ -34680,11 +34680,6 @@ MOZ_NO_FAST_LOAD
 MOZ_OGG
 =
 1
-MOZ_SYDNEYAUDIO
-=
-MOZ_WAVE
-=
-1
 MOZ_MEDIA
 =
 MOZ_OJI
@@ -42110,7 +42105,7 @@ dnl
 =
 dnl
 =
-Disable
+Enable
 Ogg
 Codecs
 dnl
@@ -42207,316 +42202,9 @@ AC_DEFINE
 (
 MOZ_OGG
 )
-MOZ_SYDNEYAUDIO
-=
-1
 MOZ_MEDIA
 =
 1
-fi
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-dnl
-=
-Disable
-Wave
-decoder
-support
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-MOZ_ARG_ENABLE_BOOL
-(
-wave
-[
--
--
-disable
--
-wave
-Disable
-Wave
-decoder
-support
-]
-MOZ_WAVE
-=
-MOZ_WAVE
-=
-1
-)
-AC_SUBST
-(
-MOZ_WAVE
-)
-if
-test
--
-n
-"
-MOZ_WAVE
-"
-;
-then
-AC_DEFINE
-(
-MOZ_WAVE
-)
-MOZ_SYDNEYAUDIO
-=
-1
-MOZ_MEDIA
-=
-1
-fi
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-dnl
-=
-Handle
-dependent
-SYDNEYAUDIO
-and
-MEDIA
-defines
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-AC_SUBST
-(
-MOZ_SYDNEYAUDIO
-)
-if
-test
--
-n
-"
-MOZ_SYDNEYAUDIO
-"
-;
-then
-AC_DEFINE
-(
-MOZ_SYDNEYAUDIO
-)
 fi
 AC_SUBST
 (
@@ -42536,134 +42224,10 @@ AC_DEFINE
 MOZ_MEDIA
 )
 fi
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-dnl
-=
-Check
-alsa
-availability
-on
-Linux
-if
-using
-sydneyaudio
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
 dnl
 If
 using
-sydneyaudio
+Ogg
 with
 Linux
 ensure
@@ -42678,7 +42242,7 @@ test
 -
 n
 "
-MOZ_SYDNEYAUDIO
+MOZ_OGG
 "
 ;
 then
