Disable browser_privatebrowsing_ui.js on mac for now. Bug 463022 filed to track fixing it.
UltraBlame original commit: bdc4dcf642d8626788725e1e55acb47c3ab91959

--- a/browser/components/privatebrowsing/test/browser/Makefile.in
+++ b/browser/components/privatebrowsing/test/browser/Makefile.in
@@ -449,10 +449,6 @@ mk
 _BROWSER_TEST_FILES
 =
 \
-browser_privatebrowsing_ui
-.
-js
-\
 browser_console_clear
 .
 js
@@ -460,6 +456,28 @@ js
 (
 NULL
 )
+ifeq
+(
+(
+filter
+mac
+cocoa
+(
+MOZ_WIDGET_TOOLKIT
+)
+)
+)
+_BROWSER_TEST_FILES
++
+=
+browser_privatebrowsing_ui
+.
+js
+\
+(
+NULL
+)
+endif
 libs
 :
 :
