Bug 462911 - support NS_PRINTING in gfx / cairo.  r=vlad
UltraBlame original commit: efb33730c654b6451c48bd679afd624d39495abe

--- a/gfx/cairo/cairo/src/Makefile.in
+++ b/gfx/cairo/cairo/src/Makefile.in
@@ -1015,7 +1015,15 @@ win32
 surface
 .
 c
-\
+ifdef
+NS_PRINTING
+DEFINES
++
+=
+CAIRO_OMIT_WIN32_PRINTING
+CSRCS
++
+=
 cairo
 -
 win32
@@ -1025,6 +1033,7 @@ printing
 surface
 .
 c
+endif
 EXPORTS
 +
 =
