Fix build bustage in 462911.  We need to either build printing or define CAIRO_OMIT_WIN32_PRINTING
UltraBlame original commit: 15bab444976e15f0e7e9db58933bc3ba69d77fea

--- a/gfx/cairo/cairo/src/Makefile.in
+++ b/gfx/cairo/cairo/src/Makefile.in
@@ -1017,10 +1017,6 @@ surface
 c
 ifdef
 NS_PRINTING
-DEFINES
-+
-=
-CAIRO_OMIT_WIN32_PRINTING
 CSRCS
 +
 =
@@ -1033,6 +1029,11 @@ printing
 surface
 .
 c
+else
+DEFINES
++
+=
+CAIRO_OMIT_WIN32_PRINTING
 endif
 EXPORTS
 +
