--- a/dom/src/threads/test/Makefile.in
+++ b/dom/src/threads/test/Makefile.in
@@ -455,6 +455,10 @@ mk
 _TEST_FILES
 =
 \
+test_importScripts
+.
+html
+\
 importScripts_worker
 .
 js
@@ -475,41 +479,85 @@ importScripts_worker_imported4
 .
 js
 \
-test_importScripts
-.
-html
-\
-test_simpleThread
-.
-html
-\
-test_threadErrors
-.
-html
-\
-test_threadTimeouts
-.
-html
-\
 test_longThread
 .
 html
+\
+longThread_worker
+.
+js
 \
 test_recursion
 .
 html
 \
+recursion_worker
+.
+js
+\
 test_regExpStatics
 .
 html
+\
+regExpStatics_worker
+.
+js
+\
+test_simpleThread
+.
+html
+\
+simpleThread_worker
+.
+js
+\
+test_threadErrors
+.
+html
+\
+threadErrors_worker1
+.
+js
+\
+threadErrors_worker2
+.
+js
+\
+threadErrors_worker3
+.
+js
+\
+threadErrors_worker4
+.
+js
+\
+test_threadTimeouts
+.
+html
+\
+threadTimeouts_worker
+.
+js
 \
 test_xhr
 .
 html
 \
+xhr_worker
+.
+js
+\
 testXHR
 .
 txt
+\
+test_fibonacci
+.
+html
+\
+fibonacci_worker
+.
+js
 \
 (
 NULL
