Back out changeset b83d3c8ac166 (bug 460811) to try to fix bustage
UltraBlame original commit: 1a2fefd12905bbc6aae0b495c005959593b11fce

--- a/dom/src/threads/Makefile.in
+++ b/dom/src/threads/Makefile.in
@@ -449,8 +449,6 @@ caps
 \
 content
 \
-docshell
-\
 gfx
 \
 js
@@ -460,8 +458,6 @@ layout
 locale
 \
 necko
-\
-plugin
 \
 pref
 \
@@ -485,15 +481,7 @@ nsDOMThreadService
 .
 cpp
 \
-nsDOMWorker
-.
-cpp
-\
-nsDOMWorkerEvents
-.
-cpp
-\
-nsDOMWorkerMessageHandler
+nsDOMWorkerBase
 .
 cpp
 \
@@ -506,6 +494,10 @@ nsDOMWorkerScriptLoader
 cpp
 \
 nsDOMWorkerSecurityManager
+.
+cpp
+\
+nsDOMWorkerThread
 .
 cpp
 \
@@ -583,3 +575,10 @@ config
 rules
 .
 mk
+#
+CXXFLAGS
++
+=
+(
+WARNINGS_AS_ERRORS
+)
