--- a/extensions/spellcheck/hunspell/src/Makefile.in
+++ b/extensions/spellcheck/hunspell/src/Makefile.in
@@ -506,6 +506,14 @@ csutil
 .
 cpp
 \
+dictmgr
+.
+cpp
+\
+filemgr
+.
+cpp
+\
 hashmgr
 .
 cpp
@@ -514,7 +522,15 @@ hunspell
 .
 cpp
 \
+hunzip
+.
+cpp
+\
 phonet
+.
+cpp
+\
+replist
 .
 cpp
 \
