Bug 324121 - Extensions with available updates for the next version of the app should not be listed in app update extension will be disabled warning (AUS patch). r=dtownsend ui-r=beltzner
UltraBlame original commit: a6e0b26a65e89e43dfbe844d34b7bbef387ded71

--- a/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
+++ b/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
@@ -1519,6 +1519,11 @@ PERMS_DIRECTORY
 =
 0755
 ;
+const
+REQ_VERSION
+=
+2
+;
 var
 gApp
 =
@@ -45829,7 +45834,7 @@ REQ_VERSION
 %
 /
 g
-1
+REQ_VERSION
 )
 ;
 aURI
