Bug 462740 - Building spidermonkey on Windows with -j3 fails: conflicts in PDB files. Related to bug 382297 and bug 286179, where we flip-flop back and forth about this. Document the way things should actually be!
UltraBlame original commit: 5d832205b7fb5fbbf8a2cdad50df6abc8bd30e24

--- a/configure.in
+++ b/configure.in
@@ -15302,7 +15302,7 @@ Gy
 Fd
 \
 (
-PDBFILE
+COMPILE_PDBFILE
 )
 "
 CXXFLAGS
@@ -15317,7 +15317,7 @@ Gy
 Fd
 \
 (
-PDBFILE
+COMPILE_PDBFILE
 )
 "
 DLL_PREFIX
@@ -16025,7 +16025,7 @@ OUT
 PDB
 :
 (
-PDBFILE
+LINK_PDBFILE
 )
 (
 DSO_LDOPTS
@@ -16048,7 +16048,7 @@ OUT
 PDB
 :
 (
-PDBFILE
+LINK_PDBFILE
 )
 (
 DSO_LDOPTS
@@ -16076,7 +16076,7 @@ Gy
 Fd
 \
 (
-PDBFILE
+COMPILE_PDBFILE
 )
 "
 CXXFLAGS
@@ -16091,7 +16091,7 @@ Gy
 Fd
 \
 (
-PDBFILE
+COMPILE_PDBFILE
 )
 "
 LIBS
