--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -14708,7 +14708,7 @@ Gy
 Fd
 \
 (
-PDBFILE
+COMPILE_PDBFILE
 )
 "
 CXXFLAGS
@@ -14723,7 +14723,7 @@ Gy
 Fd
 \
 (
-PDBFILE
+COMPILE_PDBFILE
 )
 "
 DLL_PREFIX
@@ -15390,7 +15390,7 @@ OUT
 PDB
 :
 (
-PDBFILE
+LINK_PDBFILE
 )
 (
 DSO_LDOPTS
@@ -15413,7 +15413,7 @@ OUT
 PDB
 :
 (
-PDBFILE
+LINK_PDBFILE
 )
 (
 DSO_LDOPTS
@@ -15441,7 +15441,7 @@ Gy
 Fd
 \
 (
-PDBFILE
+COMPILE_PDBFILE
 )
 "
 CXXFLAGS
@@ -15456,7 +15456,7 @@ Gy
 Fd
 \
 (
-PDBFILE
+COMPILE_PDBFILE
 )
 "
 LIBS
