--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -548,6 +548,10 @@ test_volume
 .
 html
 \
+test_wav_ended1
+.
+html
+\
 320x240
 .
 ogg
@@ -559,6 +563,10 @@ ogg
 seek
 .
 ogg
+\
+r11025_s16_c1
+.
+wav
 \
 #
 test_bug448534
