--- a/dom/tests/mochitest/ajax/offline/namespace1/sub/Makefile.in
+++ b/dom/tests/mochitest/ajax/offline/namespace1/sub/Makefile.in
@@ -398,6 +398,12 @@ DEPTH
 /
 .
 .
+/
+.
+.
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -418,6 +424,10 @@ mochitest
 ajax
 /
 offline
+/
+namespace1
+/
+sub
 include
 (
 DEPTH
@@ -428,9 +438,6 @@ config
 autoconf
 .
 mk
-DIRS
-=
-namespace1
 include
 (
 topsrcdir
@@ -444,198 +451,7 @@ mk
 _TEST_FILES
 =
 \
-offlineTests
-.
-js
-\
-test_badManifestMagic
-.
-html
-\
-test_badManifestMime
-.
-html
-\
-test_missingFile
-.
-html
-\
-test_noManifest
-.
-html
-\
-test_simpleManifest
-.
-html
-\
-test_identicalManifest
-.
-html
-\
-test_changingManifest
-.
-html
-\
-test_offlineIFrame
-.
-html
-\
-test_bug445544
-.
-html
-\
-445544_part1
-.
-html
-\
-445544_part2
-.
-html
-\
-445544
-.
-cacheManifest
-\
-445544
-.
-cacheManifest
-^
-headers
-^
-\
-test_obsolete
-.
-html
-\
-obsolete
-.
-html
-\
-badManifestMagic
-.
-cacheManifest
-\
-badManifestMagic
-.
-cacheManifest
-^
-headers
-^
-\
-fallback
-.
-html
-\
-fallback2
-.
-html
-\
-fallbackTop
-.
-html
-\
-fallback
-.
-cacheManifest
-\
-fallback
-.
-cacheManifest
-^
-headers
-^
-\
-foreign1
-.
-cacheManifest
-\
-foreign1
-.
-cacheManifest
-^
-headers
-^
-\
-foreign2
-.
-cacheManifest
-\
-foreign2
-.
-cacheManifest
-^
-headers
-^
-\
-foreign2
-.
-html
-\
-updatingIFrame
-.
-html
-\
-updatingIFrame
-.
-html
-^
-headers
-^
-\
-updatingImplicit
-.
-html
-\
-missingFile
-.
-cacheManifest
-\
-missingFile
-.
-cacheManifest
-^
-headers
-^
-\
-simpleManifest
-.
-cacheManifest
-\
-simpleManifest
-.
-cacheManifest
-^
-headers
-^
-\
-updating
-.
-cacheManifest
-\
-updating
-.
-cacheManifest
-^
-headers
-^
-\
-simpleManifest
-.
-notmanifest
-\
-changing1Sec
-.
-sjs
-\
-changing1Hour
-.
-sjs
-\
-changingManifest
-.
-sjs
-\
-offlineChild
+opp
 .
 html
 \
