Bug 462549:  Verify that an appcache manifest hasn't changed at the end of an update.  r+sr=biesi
UltraBlame original commit: 037702607ad852836fdb1b249e2bda8b47dff22f

--- a/dom/tests/mochitest/ajax/offline/Makefile.in
+++ b/dom/tests/mochitest/ajax/offline/Makefile.in
@@ -476,6 +476,10 @@ test_changingManifest
 .
 html
 \
+test_refetchManifest
+.
+html
+\
 test_offlineIFrame
 .
 html
@@ -633,7 +637,14 @@ sjs
 \
 changingManifest
 .
-sjs
+cacheManifest
+\
+changingManifest
+.
+cacheManifest
+^
+headers
+^
 \
 offlineChild
 .
