Bug 460328: Make online whitelist entries match by prefix.  r=dcamp, sr=biesi
UltraBlame original commit: 3502bada8a5c926d441fd061bd5d5330dca1cb4d

--- a/dom/tests/mochitest/ajax/offline/Makefile.in
+++ b/dom/tests/mochitest/ajax/offline/Makefile.in
@@ -431,6 +431,7 @@ mk
 DIRS
 =
 namespace1
+namespace2
 include
 (
 topsrcdir
@@ -453,6 +454,10 @@ test_badManifestMagic
 html
 \
 test_badManifestMime
+.
+html
+\
+test_bypass
 .
 html
 \
@@ -541,6 +546,21 @@ cacheManifest
 ^
 headers
 ^
+\
+bypass
+.
+cacheManifest
+\
+bypass
+.
+cacheManifest
+^
+headers
+^
+\
+bypass
+.
+html
 \
 fallback
 .
