Bug 460353: app caches should be per iframe, not per toplevel browsing context.  r=dcamp, r+sr=jst
UltraBlame original commit: bfaeea708b98cd7c9b727c3379c1b7a74c64a222

--- a/dom/tests/mochitest/ajax/offline/Makefile.in
+++ b/dom/tests/mochitest/ajax/offline/Makefile.in
@@ -507,6 +507,22 @@ cacheManifest
 headers
 ^
 \
+test_bug460353
+.
+html
+\
+460353_iframe_nomanifest
+.
+html
+\
+460353_iframe_ownmanifest
+.
+html
+\
+460353_iframe_samemanifest
+.
+html
+\
 test_obsolete
 .
 html
