--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -464,6 +464,10 @@ test_currentTime
 .
 html
 \
+test_defaultPlaybackRate
+.
+html
+\
 test_ended1
 .
 html
@@ -480,7 +484,15 @@ test_paused
 .
 html
 \
+test_playbackRate
+.
+html
+\
 test_readyState
+.
+html
+\
+test_start
 .
 html
 \
@@ -536,10 +548,6 @@ test_volume
 .
 html
 \
-test_wav_ended1
-.
-html
-\
 320x240
 .
 ogg
@@ -551,10 +559,6 @@ ogg
 seek
 .
 ogg
-\
-r11025_s16_c1
-.
-wav
 \
 #
 test_bug448534
