b=462938, Upgrade cairo to 1.8.2 and pixman to 0.12.0 [pixman piece]
UltraBlame original commit: 69224da04e45b6af348854c3fe0e52ae4bb54815

--- a/gfx/cairo/libpixman/src/Makefile.in
+++ b/gfx/cairo/libpixman/src/Makefile.in
@@ -623,7 +623,7 @@ OS_TEST
 )
 ifdef
 HAVE_ARM_SIMD
-USE_ARM
+USE_ARM_SIMD
 =
 1
 endif
@@ -804,20 +804,22 @@ DEFINES
 DUSE_VMX
 endif
 ifdef
-USE_ARM
+USE_ARM_SIMD
 CSRCS
 +
 =
 pixman
 -
 arm
+-
+simd
 .
 c
 DEFINES
 +
 =
 -
-DUSE_ARM
+DUSE_ARM_SIMD
 endif
 EXPORTS
 =
